--- a/wwwroot/css/areas/identity/account/profile/profile-actions.css
+++ b/wwwroot/css/areas/identity/account/profile/profile-actions.css
@@ -61,6 +61,10 @@
     color: #e7386d;
 }
 
+.like-circle-text:hover {
+    color: #ffffff;
+}
+
 .proj-circle {
     border: 3px var(--accent-contrast) solid;
 }
@@ -72,4 +76,8 @@
 
 .proj-circle-text {
     color: #ffcb1c;
+}
+
+.proj-circle-text:hover {
+    color: #ffffff;
 }
