--- a/wwwroot/css/home/index.css
+++ b/wwwroot/css/home/index.css
@@ -47,6 +47,10 @@ header p {
     margin: auto;
 }
 
+.links {
+    justify-content: center;
+}
+
 .features {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
