--- a/Areas/Project/Pages/Job/Details.cshtml
+++ b/Areas/Project/Pages/Job/Details.cshtml
@@ -2,7 +2,7 @@
 @model Aeon_Web.Areas.Project.Pages.Job.DetailsModel
 
 @{
-    ViewData["Title"] = "Job Details";
+    ViewData["Title"] = "Детальная информация о проекте";
     var vacancy = Model.Vacancy;
 }
 
@@ -12,6 +12,11 @@
 <script src="~/js/render-stars.js"></script>
 
 <div class="body">
+    @if (TempData["Message"] != null)
+    {
+        <div class="alert-success">@TempData["Message"]</div>
+    }
+
     <section class="job-detail-container animate-fade">
         <div class="job-header">
             <h1 class="job-title">@vacancy.Title</h1>
@@ -25,17 +30,10 @@
                 }
             </div>
             <span class="badge"><i data-lucide="calendar-days"></i> @vacancy.PostedDate.ToString("dd MMM yyyy")</span>
-            @*@if (job.SalaryFrom.HasValue || job.SalaryTo.HasValue)
-        {
-            <span class="badge">
-                <i data-lucide="dollar-sign"></i>
-                @($"{job.SalaryFrom?.ToString("C0")} - {job.SalaryTo?.ToString("C0")} {job.Currency}")
-            </span>
-        }*@
         </div>
 
         <div class="section">
-            <h2><i data-lucide="file-text"></i> Job Description</h2>
+            <h2><i data-lucide="file-text"></i>Описание</h2>
             <p>@vacancy.Description</p>
         </div>
 
@@ -61,14 +59,21 @@
             </div>
         }
 
-        <form class="actions" method="post" asp-page-handler="Like">
-            @if (!Model.IsLiked)
-            {
-                <input type="hidden" name="vacancyId" value="@vacancy.Id"/>
-                <button type="submit" class="btn-primary">Откликнуться</button>
-            }
-            <button class="btn-secondary" onclick="history.back()">Назад</button>
-        </form>
+        <div class="actions">
+            <form class="actions-buttons" method="post" asp-page-handler="Like">
+                @if (!Model.IsLiked)
+                {
+                    <input type="hidden" asp-for="@Model.Vacancy.Id"/>
+                    <button type="submit" class="btn-primary">Откликнуться</button>
+                }
+                <button class="btn-secondary" onclick="history.back()">Назад</button>
+            </form>
+
+            <form class="actions-buttons" method="post" asp-page-handler="Report">
+                <input type="hidden" asp-for="@Model.Vacancy.Id"/>
+                <button type="submit" class="btn-report">Пожаловаться</button>
+            </form>
+        </div>
     </section>
 </div>
 
