--- a/Areas/Project/Pages/Job/Swipe.cshtml
+++ b/Areas/Project/Pages/Job/Swipe.cshtml
@@ -1,13 +1,13 @@
 @page
 @model Aeon_Web.Areas.Project.Pages.Job.SwipeModel
 @{
-    ViewData["Title"] = "Job Swipe";
+    ViewData["Title"] = "Карточки проектов";
 }
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 <link rel="stylesheet" href="~/css/areas/project/swipe.css"/>
 <link rel="stylesheet" href="~/css/areas/project/star.css"/>
-<script src="~/js/areas/project/swipe.js"></script>
+<script src="~/js/areas/project/swipe-vacancy.js"></script>
 <script src="~/js/render-stars.js"></script>
 
 <div class="body">
