--- a/Areas/Project/Pages/Resume/Details.cshtml
+++ b/Areas/Project/Pages/Resume/Details.cshtml
@@ -2,7 +2,7 @@
 @model Aeon_Web.Areas.Project.Pages.Resume.DetailsModel
 
 @{
-    ViewData["Title"] = "Job Details";
+    ViewData["Title"] = "Детальная информация о резюме";
     var resume = Model.Resume;
 }
 
@@ -19,29 +19,15 @@
 
         <div class="job-meta">
             <h3>@resume.FullName</h3>
-            @*<div class="star-display" data-rating="@resume.DifficultyLevel">
-                @for (var i = 1; i <= 5; i++)
-                {
-                    <span class="star" data-star="@i"></span>
-                }
-            </div>
-            <span class="badge"><i data-lucide="calendar-days"></i> @resume.PostedDate.ToString("dd MMM yyyy")</span>
-            @if (job.SalaryFrom.HasValue || job.SalaryTo.HasValue)
-        {
-            <span class="badge">
-                <i data-lucide="dollar-sign"></i>
-                @($"{job.SalaryFrom?.ToString("C0")} - {job.SalaryTo?.ToString("C0")} {job.Currency}")
-            </span>
-        }*@
         </div>
 
         <div class="section">
-            <h2><i data-lucide="file-text"></i> Job Description</h2>
+            <h2><i data-lucide="file-text"></i>Описание</h2>
             <p>@resume.Summary</p>
         </div>
 
         <div class="section">
-            <h2><i data-lucide="list-checks"></i> Required Skills</h2>
+            <h2><i data-lucide="list-checks"></i>Навыки</h2>
             <ul class="skills">
                 @foreach (var skill in resume.ResumeSkills)
                 {
@@ -53,7 +39,7 @@
         @if (Model.IsMatch)
         {
             <div class="section">
-                <h2><i data-lucide="mail"></i> Contact</h2>
+                <h2><i data-lucide="mail"></i> Контактная информация</h2>
                 <p>Email: <a href="mailto:@resume.Contact.Email">@resume.Contact.Email</a></p>
                 @if (!string.IsNullOrWhiteSpace(resume.Contact.Phone))
                 {
@@ -62,14 +48,21 @@
             </div>
         }
 
-        <form class="actions" method="post" asp-page-handler="Like">
-            @if (!Model.IsMatch)
-            {
-                <input type="hidden" name="resumeId" value="@resume.Id"/>
-                <button type="submit" class="btn-primary">Откликнуться</button>
-            }
-            <button class="btn-secondary" onclick="history.back()">Назад</button>
-        </form>
+        <div class="actions">
+            <form class="actions-buttons" method="post" asp-page-handler="Like">
+                @if (!Model.IsLiked)
+                {
+                    <input type="hidden" asp-for="@Model.Resume.Id"/>
+                    <button type="submit" class="btn-primary">Откликнуться</button>
+                }
+                <button class="btn-secondary" onclick="history.back()">Назад</button>
+            </form>
+
+            <form class="actions-buttons" method="post" asp-page-handler="Report">
+                <input type="hidden" asp-for="@Model.Resume.Id"/>
+                <button type="submit" class="btn-report">Пожаловаться</button>
+            </form>
+        </div>
     </section>
 </div>
 
