--- a/wwwroot/css/shared/layout.css
+++ b/wwwroot/css/shared/layout.css
@@ -5,6 +5,12 @@
     margin-bottom: 5px;
 }
 
+.bg-size {
+    background-size: 10rem 10rem;
+    background-repeat: no-repeat;
+    /*background-color: #FFFFFF;*/
+}
+
 /*
 .header-content {
     display: flex;
